[workspace]
members = [
	"cli",
	"ion",
	"ion-proc",
	"modules",
	"runtime",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MPL-2.0"

[workspace.dependencies]
ion-proc = { path = "./ion-proc"}
ion = { path = "./ion"}
runtime = { path = "./runtime"}
modules = { path = "./modules"}
cli = { path = "./cli"}

bytes = "1.5.0"
colored = "2.1.0"
dunce = "1.0.4"
encoding_rs = "0.8.33"
futures = "0.3.30"
indent = "0.1.1"
mozjs = { package = "mozjs", git = "https://github.com/wasmerio/mozjs", branch = "wasi-gecko", features = ["streams"]}
mozjs_sys = { package = "mozjs_sys", git = "https://github.com/wasmerio/mozjs", branch = "wasi-gecko" }
paste = "1.0.14"
sourcemap = "6.4.1"
url = "2.5.0"

[workspace.dependencies.chrono]
version = "0.4.33"
default-features = false
features = ["clock", "std"]

[workspace.dependencies.tokio]
version = "1.35.1"
default-features = false

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny" # Expansion of thread_local has a #[deny]

[workspace.lints.clippy]
cast_lossless = "forbid"
clone_on_ref_ptr = "forbid"
ptr_as_ptr = "forbid"
ptr_cast_constness = "forbid"

[profile.release]
lto = "fat"
strip = "symbols"
