[package]
name = "runtime"
version = "0.1.0"

edition.workspace = true
license.workspace = true
authors = ["Redfire <redfire75369@hotmail.com>"]

[dependencies]
base64 = "0.21.5"
data-url = "0.3.1"
dirs = "5.0.1"
encoding_rs = "0.8.33"
form_urlencoded = "1.2.1"
indexmap = "2.1.0"
sha3 = "0.10.8"
term-table = "1.3.2"

bytes.workspace = true
chrono.workspace = true
dunce.workspace = true
futures.workspace = true
indent.workspace = true
mozjs.workspace = true
paste.workspace = true
sourcemap.workspace = true
url.workspace = true
hyper-multipart-rfc7578 = "0.8.0"
as-any = "0.3.1"
multer = "3.0.0"

[dependencies.async-recursion]
version = "1.0.5"
optional = true

[dependencies.const_format]
version = "0.2.32"
optional = true

[dependencies.http]
version = "0.2.11"
optional = true

[dependencies.hyper]
version = "0.14.28"
features = ["client", "http1", "tcp"]
optional = true

[dependencies.rustls]
version = "0.22.2"
optional = true

[dependencies.hyper-rustls]
version = "0.25.0"
default-features = false
features = ["http1", "tls12", "webpki-tokio"]
optional = true

[dependencies.ion]
workspace = true
features = ["macros", "sourcemap"]

[dependencies.mime]
version = "0.3.17"
optional = true

[dependencies.swc_core]
version = "0.87.6"
features = [
	"common",
	"common_sourcemap",
	"common_tty",
	"ecma_ast",
	"ecma_codegen",
	"ecma_parser",
	"ecma_transforms",
	"ecma_parser_typescript",
	"ecma_transforms_typescript",
	"ecma_visit",
]

[dependencies.sys-locale]
version = "0.3.1"
optional = true

[dependencies.tokio]
workspace = true
features = ["sync", "rt", "fs"]

[features]
debugmozjs = ["ion/debugmozjs"]
fetch = [
	"dep:async-recursion",
	"dep:const_format",
	"dep:http",
	"dep:hyper",
	"dep:rustls",
	"dep:hyper-rustls",
	"dep:mime",
	"dep:sys-locale",
]

[lints]
workspace = true

[lib]
test = false
doctest = false
